--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.15.21",
     "@types/node-fetch": "^2.6.12",
     "drizzle-kit": "^0.31.1",
@@ -25,6 +26,7 @@
     "better-sqlite3": "^11.10.0",
     "drizzle-orm": "^0.43.1",
     "grammy": "^1.36.1",
+    "lodash-es": "^4.17.21",
     "node-fetch": "^2.7.0",
     "puppeteer": "^24.9.0",
     "rebrowser-puppeteer": "^24.8.1",
