--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node --env-file config/config.env dist/src/index.js",
+    "schedule": "node --env-file config/config.env dist/cron.js",
     "postinstall": "npx puppeteer install",
     "db:generate": "drizzle-kit generate"
   },
@@ -17,19 +18,25 @@
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.15.21",
     "@types/node-fetch": "^2.6.12",
+    "@types/staticmaps": "^1.12.5",
     "drizzle-kit": "^0.31.1",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@anthropic-ai/vertex-sdk": "^0.11.4",
     "@google/genai": "^1.0.1",
+    "@googlemaps/places": "^2.0.1",
     "@techery/zod-to-vertex-schema": "^0.1.4",
     "better-sqlite3": "^11.10.0",
     "drizzle-orm": "^0.43.1",
     "grammy": "^1.36.1",
     "lodash-es": "^4.17.21",
+    "node-cron": "^4.0.7",
     "node-fetch": "^2.7.0",
     "puppeteer": "^24.9.0",
     "rebrowser-puppeteer": "^24.8.1",
+    "sharp": "^0.34.2",
+    "staticmaps": "^1.13.1",
     "zod": "^3.25.27"
   }
 }
