--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash-es": "^4.17.21",
     "node-cron": "^4.0.7",
     "node-fetch": "^2.7.0",
+    "p-retry": "^6.2.1",
     "puppeteer": "^24.9.0",
     "rebrowser-puppeteer": "^24.8.1",
     "sharp": "^0.34.2",
