--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/lodash-es": "^4.17.12",
+    "@types/ms": "^2.1.0",
     "@types/node": "^22.15.21",
     "@types/node-fetch": "^2.6.12",
     "@types/staticmaps": "^1.12.5",
@@ -31,14 +32,17 @@
     "drizzle-orm": "^0.43.1",
     "grammy": "^1.36.1",
     "lodash-es": "^4.17.21",
+    "ms": "^2.1.3",
     "node-cron": "^4.0.7",
     "node-fetch": "^2.7.0",
+    "p-map": "^7.0.3",
     "p-retry": "^6.2.1",
     "puppeteer": "^24.9.0",
     "rebrowser-puppeteer": "^24.8.1",
     "sharp": "^0.34.2",
     "staticmaps": "^1.13.1",
     "telegramify-markdown": "^1.3.0",
+    "winston": "^3.17.0",
     "zod": "^3.25.27"
   }
 }
