add lint and formatting

--- a/package.json
+++ b/package.json
@@ -1,46 +1,54 @@
 {
-  "name": "rent-posts-scraper",
-  "version": "0.0.1",
-  "description": "a facbook group scraper for rent listing posts",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "node --env-file config/config.env dist/src/index.js",
-    "schedule": "node --env-file config/config.env dist/cron.js",
-    "postinstall": "npx puppeteer install",
-    "db:generate": "drizzle-kit generate"
-  },
-  "author": "Tuvia Rumpler",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13",
-    "@types/lodash-es": "^4.17.12",
-    "@types/ms": "^2.1.0",
-    "@types/node": "^22.15.21",
-    "@types/node-fetch": "^2.6.12",
-    "@types/staticmaps": "^1.12.5",
-    "drizzle-kit": "^0.31.1",
-    "typescript": "^5.8.3"
-  },
-  "dependencies": {
-    "@google/genai": "^1.0.1",
-    "@googlemaps/places": "^2.0.1",
-    "@techery/zod-to-vertex-schema": "^0.1.4",
-    "better-sqlite3": "^11.10.0",
-    "drizzle-orm": "^0.43.1",
-    "grammy": "^1.36.1",
-    "lodash-es": "^4.17.21",
-    "ms": "^2.1.3",
-    "node-cron": "^4.0.7",
-    "node-fetch": "^2.7.0",
-    "p-map": "^7.0.3",
-    "p-retry": "^6.2.1",
-    "puppeteer": "^24.9.0",
-    "rebrowser-puppeteer": "^24.8.1",
-    "sharp": "^0.34.2",
-    "staticmaps": "^1.13.1",
-    "winston": "^3.17.0",
-    "zod": "^3.25.27"
-  }
+    "name": "rent-posts-scraper",
+    "version": "0.0.1",
+    "description": "a facbook group scraper for rent listing posts",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "tsc",
+        "start": "node --env-file config/config.env dist/src/index.js",
+        "schedule": "node --env-file config/config.env dist/cron.js",
+        "postinstall": "npx puppeteer install",
+        "db:generate": "drizzle-kit generate",
+        "lint": "eslint . --ext .ts --max-warnings=0",
+        "lint:fix": "eslint . --ext .ts --fix",
+        "format": "prettier --write ."
+    },
+    "author": "Tuvia Rumpler",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/better-sqlite3": "^7.6.13",
+        "@types/lodash-es": "^4.17.12",
+        "@types/ms": "^2.1.0",
+        "@types/node": "^22.15.21",
+        "@types/node-fetch": "^2.6.12",
+        "@types/staticmaps": "^1.12.5",
+        "@typescript-eslint/eslint-plugin": "^8.33.0",
+        "@typescript-eslint/parser": "^8.33.0",
+        "drizzle-kit": "^0.31.1",
+        "eslint": "^9.27.0",
+        "husky": "^9.1.7",
+        "prettier": "^3.5.3",
+        "typescript": "^5.8.3"
+    },
+    "dependencies": {
+        "@google/genai": "^1.0.1",
+        "@googlemaps/places": "^2.0.1",
+        "@techery/zod-to-vertex-schema": "^0.1.4",
+        "better-sqlite3": "^11.10.0",
+        "drizzle-orm": "^0.43.1",
+        "grammy": "^1.36.1",
+        "lodash-es": "^4.17.21",
+        "ms": "^2.1.3",
+        "node-cron": "^4.0.7",
+        "node-fetch": "^2.7.0",
+        "p-map": "^7.0.3",
+        "p-retry": "^6.2.1",
+        "puppeteer": "^24.9.0",
+        "rebrowser-puppeteer": "^24.8.1",
+        "sharp": "^0.34.2",
+        "staticmaps": "^1.13.1",
+        "winston": "^3.17.0",
+        "zod": "^3.25.27"
+    }
 }
