implement sqlite queue, and create facebook and notifications queue

--- a/package.json
+++ b/package.json
@@ -17,19 +17,24 @@
     "author": "Tuvia Rumpler",
     "license": "ISC",
     "devDependencies": {
+        "@eslint/eslintrc": "^3.3.1",
+        "@eslint/js": "^9.28.0",
         "@types/better-sqlite3": "^7.6.13",
         "@types/lodash-es": "^4.17.12",
         "@types/ms": "^2.1.0",
         "@types/node": "^22.15.21",
         "@types/node-fetch": "^2.6.12",
         "@types/staticmaps": "^1.12.5",
-        "@typescript-eslint/eslint-plugin": "^8.33.0",
+        "@typescript-eslint/eslint-plugin": "^8.33.1",
         "@typescript-eslint/parser": "^8.33.0",
         "drizzle-kit": "^0.31.1",
-        "eslint": "^9.27.0",
+        "eslint": "^9.28.0",
+        "eslint-config-prettier": "^10.1.5",
+        "globals": "^16.2.0",
         "husky": "^9.1.7",
         "prettier": "^3.5.3",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.33.1"
     },
     "dependencies": {
         "@google/genai": "^1.0.1",
